apps/xteve/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xteve
    argocd.argoproj.io/instance: xteve
  name: xteve
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: xteve
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xteve
    spec:
      containers:
        - image: 'alturismo/xteve:latest'
          imagePullPolicy: IfNotPresent
          name: xteve
          ports:
            - containerPort: 34400
              protocol: TCP
          resources:
            limits: 
              cpu: "1"
              memory: 2Gi
          volumeMounts:
            - mountPath: /config
              name: nfs-proxmox1-xteve
              subPath: config
            - mountPath: /root/.xteve
              name: nfs-proxmox1-xteve
              subPath: root
            - mountPath: /tmp/xteve
              name: nfs-proxmox1-xteve
              subPath: tmp
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
      volumes:
        - name: nfs-proxmox1-xteve
          persistentVolumeClaim:
            claimName: nfs-proxmox1-xteve-claim
