apps/xteve/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: xteve-service
spec:
  selector:
    app: xteve
  ports:
  - protocol: TCP
    port: 34400
    targetPort: 34400
  type: ClusterIP
