apps/xteve/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xteve-virtual-service
  namespace: media
spec:
  hosts:
  - "xteve.securefamily.tv"
  gateways:
  - default/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 34400
        host: xteve-service.media.svc.cluster.local
